--- a/about.html
+++ b/about.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
-    <title>Blog Title<%= ' - ' + current_article.title unless current_article.nil? %></title>
-    <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
+    <title>Blog Title</title>
+    <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="/feed.xml" />
     <link href="../stylesheets/all.css" rel="stylesheet" type="text/css" />
     <link href="../stylesheets/normalize.css" rel="stylesheet" type="text/css" />
-    <link href="../stylesheets/bootstrap-social.css" rel="stylesheet" type="text/css" />
     <script src="../javascripts/all.js" type="text/javascript"></script>
   </head>
   <body>
     
     <div id="main" role="main">
-      <%= yield %>
+      <h1>About Me</h1>
+
+
     </div>
     
   </body>
